syntax = "proto3";

package data_node;

service BlockStorageService {
  rpc CreateBlock(CreateBlockRequest) returns (CreateBlockResponse) {}
  rpc ReadBlock(ReadBlockRequest) returns (stream ReadBlockResponse) {}
  rpc UpdateBlock(UpdateBlockRequest) returns (UpdateBlockResponse) {}
  rpc DeleteBlock(DeleteBlockRequest) returns (DeleteBlockResponse) {}
}

message CreateBlockRequest {
}

message CreateBlockResponse {
  bytes block_id = 1;
}

message ReadBlockRequest {
  bytes block_id = 1;
}

message ReadBlockResponse {
  bytes data = 1;
}

message UpdateBlockRequest {
  bytes block_id = 1;
  bytes data = 2;
}

message UpdateBlockResponse {
}

message DeleteBlockRequest {
  bytes block_id = 1;
}

message DeleteBlockResponse {
}